# lemmy-email-check

./: .env.example  .env_example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  Taskfile.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
docs/emailchecker/: fetchLists.md  index.md
emailchecker/: __main__.py  disposable.list  email.list  fetchLists.py  main.py  manual_blocklist.list
